style: fix to contextmenu not showing on bottom

--- a/styles/scss/components/_forms.scss
+++ b/styles/scss/components/_forms.scss
@@ -240,7 +240,7 @@
 	.sheet-body,
 	.tab {
 		flex: 1;
-		overflow-y: auto;
+		// overflow-y: auto;
 	}
 
 	/* Tabs styling */
